SDK Release Notes
#################

.. contents:: List of Releases
   :depth: 1

UNRELEASED
##########

API Changes
***********
* CHANGED IN: OptionSelector: readonly property bool currentlyExpanded TO property bool currentlyExpanded
* CHANGED IN: ItemSelector: readonly property bool currentlyExpanded TO property bool currentlyExpanded
* ADDED IN: Action: property string iconName
* ADDED IN: ActionItem: property string iconName
* ADDED IN: OptionSelectorDelegate: property string iconName
* ADDED IN: OptionSelectorDelegate: property url iconSource
* DEPRECATED IN: OptionSelectorDelegate: property url icon
* ADDED IN: ListItems.Base: property string fallbackIconName
* ADDED IN: ListItems.Base: property string iconName
* ADDED IN: ListItems.Base: property url iconSource
* DEPRECATED IN: ListItems.Base: property variant icon
* ADDED IN: ListItems.Standard: property string fallbackIconName
* ADDED IN: ListItems.Standard: property string iconName
* ADDED IN: ListItems.Standard: property url iconSource
* DEPRECATED IN: ListItems.Standard: property variant icon
* ADDED IN: TabBar: property int selectedIndex
* DEPRECATED IN TabBar: property Item tabsItem
* ADDED IN: OptionSelector: readonly property bool currentlyExpanded
* ADDED IN: ItemSelector: readonly property bool currentlyExpanded
* ADDED IN: Tab: readonly property int index
* ADDED IN: ListItem.Empty: property bool confirmRemoval
* ADDED IN: OptionSelector: property bool multiSelection
* ADDED IN: ItemSelector: property bool multiSelection
* ADDED IN: OptionSelector: readonly property real itemHeight
* ADDED IN: ItemSelector: readonly property real itemHeight
* ADDED IN: OptionSelector: signal expansionCompleted()
* ADDED IN: ItemSelector: signal expansionCompleted()
* ADDED IN: OptionSelectorDelegate: property bool constrainImage
* ADDED IN: Empty: property alias divider
* ADDED IN: ListItems/OptionSelector: signal delegateSelected()
* REMOVED IN: OptionSelector: signal scroll()