@@ -25,5 +25,5 @@ SUBDIRS += tst_units \
     tst_arguments \
     tst_argument \
     tst_layouts \
-    #tst_alarms \
+    tst_alarms \
     tst_theme
