@@ -9,6 +9,10 @@ UNRELEASED
 
 API Changes
 ***********
+* ADDED IN: Picker: property real itemWidth
+* ADDED IN: Picker: property real itemHeight
+* ADDED IN: Picker: readonly property Item itemList
+* ADDED IN: PickerDelegate: readonly property Picker picker
 * CHANGED IN: OptionSelector: readonly property bool currentlyExpanded TO property bool currentlyExpanded
 * CHANGED IN: ItemSelector: readonly property bool currentlyExpanded TO property bool currentlyExpanded
 * ADDED IN: Action: property string iconName
